--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-PORT = 4002
-DATABASE = 'mongodb://localhost/internship'
+PORT = 5000
+DATABASE = 'mongodb://127.0.0.1:27017/ims'
 SECRET='Thisisatemporarysecret'
 EMAILFROM='imspict123@gmail.com'
 PASSWORD='imspict2017'
